<resources>
    <string name="app_name">Covid-19 Calculator</string>
    <string name="welcome_message">COVID-19 Risk Calculator</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="preselected">Pre-Selected Scenario</string>
    <string name="newScenario">Create New Scenario</string>
    <string name="FAQ">FAQ / Resources</string>
    <string name="disclaimerText">In this application we provide our best estimate based on the best
        information available to us, even when that evidence is not entirely conclusive or accurate.
        We have read a lot of research written by experts, however we ourselves are not experts on
        this topic. There is still a lot of uncertainty about COVID-19 and the ways that it is being
        dealt with are rapidly changing. Do not rely on this tool for any medical advice. Please
        continue to follow government guidance. Please use this application at your own risk!</string>
    <string name="okButton">OK</string>
    <string name="location_message">Please select your location:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="calculate_risk">Calculating your risk:</string>
    <string name="num_people">How many people will be near you (within 15 feet)?</string>
    <!--
        Maximum: 5
    -->
    <string name="results">Results</string>
    <string name="results_microcovids">~#### microCOVIDs*</string>-
    <string name="results_risk">How risky is this?</string>
    <string name="results_risk2">This is riskPercentage risky for you.</string>
    <string name="results_microcovids2">*1 microCOVID = a one-in-a-million chance of getting COVID.</string>
    <string name="newtestButton">Start New Test</string>
    <string name="riskAllocation">Risk allocation: riskAllocationPercentage</string>
    <string name="riskProfile">What is the person(s) Risk Profile?</string>
    <string name="activities">What types of activities will be performed?</string>
    <string name="amountOfTime">Duration (Minutes)</string>
    <string name="avgdistance">How close are the nearby people on average?</string>
    <string name="activityTime">How long is the activity in minutes?</string>
    <!--
        Maximum: 60 minutes
    -->
    <string name="activities_title">Activities</string>




    <string-array name="counties">
        <item>Choose your county...</item>
        <item>C1</item>
        <item>C2</item>
    </string-array>

    <string-array name="states">
        <item>Choose your state...</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="riskProfiles">
        <item>Please select one...</item>
        <item>An average person in your area</item>
        <item>An essential or front-line worker in your area</item>
        <item>Someone in your area that is not an essential or front-line worker</item>
        <item>Lives alone and only grocery shops</item>
        <item>Lives with partner, both of whom only grocery shop</item>
        <item>In a closed pod of 4 people(who do not go to work or socialize)</item>
        <item>In a closed pod of 10 people(who do not go to work or socialize)</item>
        <item>In a closed pod of 20 people(who do not go to work or socialize)</item>
        <item>Has 1 close contact(Incl. roommates) who socializes but does not work</item>
        <item>Has 4 close contacts(Incl. roommates) who socialize but do not work</item>
        <item>Has 10 close contacts(Incl. roommates) who socialize but do not work</item>
        <item>Has 1 close contact(Incl. roommates) who is an essential worker</item>
        <item>Goes to bars regularly</item>
        <item>Currently infected with COVID-19</item>
    </string-array>

    <string-array name="interaction">
        <item>ONE TIME INTERACTION!!</item>
    </string-array>

    <string-array name="ventilation">
        <item>Environment....</item>
        <item>Inside[baseline risk]</item>
        <item>Outside[1/20 the risk]</item>
        <item>A train with air filtration[1/4 the risk]</item>
        <item>An airplane[1/6 the risk]</item>
        <item>A moving car with the windows rolled down[1/4 the risk]</item>
        <item>A space with one or more sides open the the outdoors[1/4 the risk]</item>
        <item></item>
    </string-array>

    <string-array name="distance">
        <item>SHOW ME (distance)</item>
        <item>Kissing [2x the risk]</item>
        <item></item>
    </string-array>

    <string-array name="averageDistance">
        <item>Avg Distance apart...</item>
        <item>Kissing [2x the risk]</item>
        <item>Close (&lt;1ft apart)[2x the risk]</item>
        <item>Normal socializing (~3ft apart)[baseline risk]</item>
        <item>&gt;6ft[1/2 the risk] </item>
        <item>&gt;10ft[1/4 the risk]</item>
    </string-array>

    <string-array name="yourMask">
        <item>Your mask type...</item>
        <item>No Mask or poorly-worn mask[baseline risk]</item>
        <item>Cotton mask, bandanna, or buff[baseline risk]</item>
        <item>Surgical mask or mask with PM2.5 filter insert[1/2 the risk]</item>
        <item>Well fitting, well sealed N95 respirator[1/10 the risk]</item>
    </string-array>

    <string-array name="theirMask">
        <item>Their mask type...</item>
        <item>No Mask or poorly-worn mask[baseline risk]</item>
        <item>Cotton mask, bandanna, or buff[baseline risk]</item>
        <item>Surgical mask or mask with PM2.5 filter insert[1/2 the risk]</item>
        <item>Well fitting, well sealed N95 respirator[1/10 the risk]</item>
    </string-array>

    <string-array name="conversation">
        <item>Conversation...</item>
        <item>Not talking(such as quietly riding the train)[1/5 the risk]</item>
        <item>Normal conversation[baseline risk]</item>
        <item>Loud talking(shouting, talking over music, singing)[5x the risk]</item>
    </string-array>

    <string-array name="tolerance">
        <item>RISK TOLERANCE???</item>
    </string-array>


</resources>