<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".welcome_screen">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="571dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="8sp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newScenario"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="281dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/newScenario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FaqButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="495dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="158dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/FAQ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/preSelectedButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="404dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/preselected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>