<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/riskSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:background="#00BCD4"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRiskProfile" />

    <Spinner
        android:id="@+id/spinnerRiskProfile"
        android:layout_width="312dp"
        android:layout_height="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="65dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riskPeopleNear3" />

    <TextView
        android:id="@+id/riskPeopleNear3"
        android:layout_width="334dp"
        android:layout_height="25dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="65dp"
        android:text="@string/riskProfile"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riskNumPeopleInput2" />

    <EditText
        android:id="@+id/riskNumPeopleInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="105dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riskPeopleNear2" />

    <TextView
        android:id="@+id/riskPeopleNear2"
        android:layout_width="334dp"
        android:layout_height="25dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="65dp"
        android:text="@string/activityTime"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAvgDistance" />

    <TextView
        android:id="@+id/riskPeopleNear"
        android:layout_width="334dp"
        android:layout_height="25dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="65dp"
        android:text="@string/avgdistance"
        android:textAlignment="center"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riskNumPeopleInput" />

    <TextView
        android:id="@+id/welcome_message3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="8sp"
        android:text="@string/calculate_risk"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:outlineProvider="none"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/riskNumPeople"
        android:layout_width="334dp"
        android:layout_height="25dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="303dp"
        android:text="@string/num_people"
        android:textAlignment="center"
        android:textColor="#978080"
        app:layout_constraintBottom_toTopOf="@+id/newtestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/riskNumPeopleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="105dp"

        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riskNumPeople" />

    <Spinner
        android:id="@+id/spinnerAvgDistance"
        android:layout_width="303dp"
        android:layout_height="29dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="65dp"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riskPeopleNear" />

    <TextView
        android:id="@+id/tvCountyPopulation"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="County Population"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tvActiveCases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvActiveCases"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:text="County Infection Rate"
        app:layout_constraintBottom_toTopOf="@+id/riskNumPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>