<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:outlineProvider="background"
    tools:context=".location_screen">

    <TextView
        android:id="@+id/welcome_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="571dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="8sp"
        android:text="@string/location_message"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:outlineProvider="none"
        android:text="@string/back"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/state_spinner"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="100dp"
        android:animateLayoutChanges="false"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:entries="@array/states"
        android:outlineProvider="bounds"
        android:scrollbars="horizontal|vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message2" />

    <Spinner
        android:id="@+id/county_spinner"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        android:entries="@array/counties"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="horizontal|vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_spinner" />

    <Button
        android:id="@+id/location_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="#00BCD4"
        android:outlineProvider="bounds"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/county_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>